Add migrations, index form

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,7 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1>Dictionary Game</h1>
+<h4>Loads of fun when all you have is a dictionary</h4>
+<form action="/" method="POST">
+  <label for="name">Enter a username:</label>
+  <input name="name" type="text">
+  <button type="submit">Play!</button>
+</form>
